--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/roboto_light"
         android:gravity="center"
         android:text="$0"
         android:textColor="#000000"
