--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dialog_button_color">#26C6DA</color>
+    <color name="savebutton">#</color>
+    <color name="green_leaf_top">#8BC34A</color>
+    <color name="green_leaf_bottom">#7DCF7A</color>
+    <color name="Gray">#524E4E</color>
+    <color name="Green">#2E631B</color>
+    <color name="MyButtonDarkGray">#424040</color>
 </resources>
