--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dialog_button_color">#26C6DA</color>
-    <color name="savebutton">#</color>
+<!--    <color name="savebutton">#</color>-->
     <color name="green_leaf_top">#8BC34A</color>
     <color name="green_leaf_bottom">#7DCF7A</color>
     <color name="Gray">#524E4E</color>
