--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,9 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <style name="button" parent="@android:style/Widget.Button">
-            <item name="android:background">@drawable/button_style</item>
-        </style>
+<!--        <style name="button" parent="@android:style/Widget.Button">-->
+<!--            <item name="android:background">@drawable/button_style</item>-->
+<!--        </style>-->
 
     </style>
 </resources>
