--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="$0.00"
-                android:inputType="textPersonName"
+                android:inputType="numberDecimal"
                 android:textAlignment="textEnd" />
         </TableRow>
 
@@ -182,17 +182,6 @@
                 android:ems="10"
                 android:inputType="date" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="date" />
         </TableRow>
 
     </TableLayout>
