--- a/app/src/main/res/layout/activity_debit.xml
+++ b/app/src/main/res/layout/activity_debit.xml
@@ -123,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="$0.00"
-                android:inputType="textPersonName"
+                android:inputType="numberDecimal"
                 android:textAlignment="textEnd" />
         </TableRow>
 
