--- a/app/src/main/res/layout/activity_investments.xml
+++ b/app/src/main/res/layout/activity_investments.xml
@@ -21,6 +21,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/dollarText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/roboto_light"
+        android:gravity="center"
+        android:text="$0"
+        android:textColor="#000000"
+        android:textSize="80sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/helloText" />
+
+    <TextView
         android:id="@+id/SPYPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,6 +47,18 @@
         app:layout_constraintTop_toBottomOf="@+id/helloText" />
 
     <TextView
+        android:id="@+id/totalSPYStocks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/purple_700"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/googleTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SPYPrice" />
+
+    <TextView
         android:id="@+id/googleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,6 +69,18 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/totalGoogleStocks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/purple_700"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/googleTextView" />
 
     <ImageButton
         android:id="@+id/settingsButton"
