--- a/app/src/main/res/layout/activity_investments.xml
+++ b/app/src/main/res/layout/activity_investments.xml
@@ -82,6 +82,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/googleTextView" />
 
+    <View
+        android:id="@+id/rectangle_9"
+        android:layout_width="274dp"
+        android:layout_height="100dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="19dp"
+        android:background="@drawable/rectangle_9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dollarText" />
+
     <ImageButton
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
