activated Cancel buttons

--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -33,12 +33,12 @@
         android:textColor="#000000"
         android:textSize="36sp"
         app:cornerRadius="29dip"
-        app:layout_constraintBottom_toTopOf="@+id/outButton"
+        app:layout_constraintBottom_toTopOf="@+id/creditCancelButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/outButton"
+        android:id="@+id/creditCancelButton"
         android:layout_width="204dp"
         android:layout_height="96dp"
         android:layout_marginBottom="24dp"
